my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EPARAM/EPARAM.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EPARAM.dml:10:31: error EPARAM: illegal value for parameter 'configuration'
